--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>ModSearch</title>
-</head>
-<body>
-<div id="app"></div>
-<script src="./src/main.ts" type="module"></script>
-</body>
+    <head>
+        <title>ModSearch</title>
+        <meta charset="UTF-8"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <script src="./src/main.ts" type="module"></script>
+    </head>
+    <body>
+        <nav id="nav-bar">
+            <img id="magnifying-glass" src="src/assets/images/magnifying_glass.png">
+            <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off"/>
+            <div id="page">001</div>
+        </nav>
+        <div id="seperator"></div>
+    </body>
 </html>
