--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav id="nav-bar">
             <img id="magnifying-glass" src="src/assets/images/magnifying_glass.png">
-            <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off"/>
+            <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off" autofocus/>
             <div id="page">001</div>
         </nav>
         <div id="seperator"></div>
