added loading icon, tick and cross

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,19 @@
         <nav id="nav-bar">
             <img id="magnifying-glass" src="src/assets/images/magnifying_glass.png">
             <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off" autofocus/>
-            <div id="page">001</div>
+            <div id="loading-icon"> <!-- loading icon taken and minified from: https://loading.io/css/ -->
+                <div>
+                    <img id="result-status">
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
         <div id="seperator"></div>
     </body>
