renamed img tags to left and right icon and gave them padding instead of margin. Also seperated right-section and right-icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <nav id="nav-bar">
-            <img id="magnifying-glass" src="src/assets/images/magnifying_glass.png">
+            <img id="left-icon">
             <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off" autofocus/>
-            <div id="loading-icon"> <!-- loading icon taken and minified from: https://loading.io/css/ -->
+            <div id="right-section"> <!-- loading icon taken and minified from: https://loading.io/css/ -->
                 <div>
-                    <img id="result-status">
+                    <img id="right-icon">
                 </div>
                 <div></div>
                 <div></div>
