awaited functions that needed to be awaited

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,6 @@
             <img id="left-icon">
             <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off" autofocus/>
             <div id="right-section"> <!-- loading icon taken and minified from: https://loading.io/css/ -->
-                <div>
-                    <img id="right-icon">
-                </div>
                 <div></div>
                 <div></div>
                 <div></div>
@@ -22,6 +19,8 @@
                 <div></div>
                 <div></div>
                 <div></div>
+                <div></div>
+                <img id="right-icon" src="src/assets/images/cross.png">
             </div>
         </nav>
         <div id="seperator"></div>
