--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
         <nav id="nav-bar">
             <img id="left-icon">
             <input id="search-bar" type="field" placeholder="Search for anything" autocomplete="off" autofocus/>
-            <img id="right-icon" src="src/assets/images/cross.png">
+            <img id="right-icon" src="">
             <div id="right-section"> <!-- loading icon taken and minified from: https://loading.io/css/ -->
                 <div></div>
                 <div></div>
